--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- ===== HEADER / TITLE SECTION ===== -->
     <header>
-        <h1>Nano4: Low-Power AI Compute Cluster</h1>
+        <h1>Nano4: Low-Power AI Server Farm</h1>
         <p class="subtitle">NASA HUNCH Project – Warren Tech</p>
     </header>
 
