--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
     <!-- ===== HEADER / TITLE SECTION ===== -->
     <header>
-        <h1>Nano4: Low-Power AI Server Farm</h1>
-        <p class="subtitle">NASA HUNCH Project – Warren Tech</p>
+        <h1>Nano4: AI Server Farm</h1>
+        <p class="subtitle">NASA HUNCH – Warren Tech Central</p>
     </header>
 
 
     <!-- ===== NAVIGATION (Optional but looks professional) ===== -->
     <nav>
-        <a href="#overview">Overview</a>
-        <a href="#problem">Problem</a>
+        <a href="#overview">Project Overview</a>
+        <a href="#problem">Problem Statement</a>
         <a href="#design">System Design</a>
-        <a href="#progress">Progress</a>
+        <a href="#progress">Progress & Results</a>
         <a href="#team">Team</a>
     </nav>
 
@@ -71,7 +71,10 @@
     <section id="team">
         <h2>Team</h2>
         <p>
-            <!-- PUT TEAM MEMBER NAMES HERE -->
+            Kenny Chiv
+            Mylo Dove
+            Davyd Prutskov
+            Jackson Grimsley
         </p>
     </section>
 
