--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <!-- ===== NAVIGATION (Optional but looks professional) ===== -->
     <nav>
-        <a href="#overview">Project Overview</a>
-        <a href="#problem">Problem Statement</a>
-        <a href="#design">System Design</a>
-        <a href="#progress">Progress & Results</a>
+        <a href="#Project overview">Project Overview</a>
+        <a href="#problem Statement">Problem Statement</a>
+        <a href="#System design">System Design</a>
+        <a href="#progress & Results">Progress & Results</a>
         <a href="#team">Team</a>
     </nav>
 
@@ -70,12 +70,10 @@
     <!-- ===== TEAM SECTION ===== -->
     <section id="team">
         <h2>Team</h2>
-        <p>
-            Kenny Chiv
+        <p>Kenny Chiv
             Mylo Dove
             Davyd Prutskov
-            Jackson Grimsley
-        </p>
+            Jackson Grimsley</p>
     </section>
 
 
