--- a/index.html
+++ b/index.html
@@ -7,80 +7,57 @@
 </head>
 <body>
 
-    <!-- ===== HEADER / TITLE SECTION ===== -->
-    <header>
-        <h1>Nano4: AI Server Farm</h1>
-        <p class="subtitle">NASA HUNCH – Warren Tech Central</p>
-    </header>
+<header>
+    <h1>Nano4: AI Server Farm</h1>
+    <p class="subtitle">NASA HUNCH – Warren Tech Central</p>
+</header>
 
+<nav>
+    <a href="#overview">Project Overview</a>
+    <a href="#problem">Problem Statement</a>
+    <a href="#design">System Design</a>
+    <a href="#progress">Progress & Results</a>
+    <a href="#team">Team</a>
+</nav>
 
-    <!-- ===== NAVIGATION (Optional but looks professional) ===== -->
-    <nav>
-        <a href="#Project overview">Project Overview</a>
-        <a href="#problem Statement">Problem Statement</a>
-        <a href="#System design">System Design</a>
-        <a href="#progress & Results">Progress & Results</a>
-        <a href="#team">Team</a>
-    </nav>
+<section id="overview">
+    <h2>Project Overview</h2>
+    <p>Put your overview text here.</p>
+</section>
 
+<section id="problem">
+    <h2>Problem Statement</h2>
+    <p>Put your problem statement here.</p>
+</section>
 
-    <!-- ===== PROJECT OVERVIEW ===== -->
-    <section id="overview">
-        <h2>Project Overview</h2>
-        <p>
-            <!-- PUT YOUR PROJECT OVERVIEW TEXT HERE -->
-        </p>
-    </section>
+<section id="design">
+    <h2>System Design</h2>
+    <p>Explain how your nodes connect and operate.</p>
+    <img src="prototype.jpg" alt="Cluster Prototype Image">
+</section>
 
+<section id="progress">
+    <h2>Progress & Results</h2>
+    <ul>
+        <li>Three Jetson Nano nodes integrated</li>
+        <li>Software stack deployed</li>
+        <li>Local data logging operational</li>
+    </ul>
+</section>
 
-    <!-- ===== PROBLEM STATEMENT ===== -->
-    <section id="problem">
-        <h2>Problem Statement</h2>
-        <p>
-            <!-- PUT YOUR PROBLEM STATEMENT HERE -->
-        </p>
-    </section>
+<section id="team">
+    <h2>Team</h2>
+    <ul>
+        <li>Kenny Chiv</li>
+        <li>Mylo Dove</li>
+        <li>Davyd Prutskov</li>
+        <li>Jackson Grimsley</li>
+    </ul>
+</section>
 
-
-    <!-- ===== SYSTEM DESIGN ===== -->
-    <section id="design">
-        <h2>System Design</h2>
-        <p>
-            <!-- EXPLAIN HOW YOUR NODES CONNECT, HOT SWAP, ETC -->
-        </p>
-
-        <!-- OPTIONAL: IMAGE AREA -->
-        <img src="prototype.jpg" alt="Cluster Prototype Image">
-        <!-- Replace prototype.jpg with your actual image file -->
-    </section>
-
-
-    <!-- ===== PROGRESS ===== -->
-    <section id="progress">
-        <h2>Progress & Results</h2>
-        <ul>
-            <!-- LIST YOUR ACHIEVEMENTS HERE -->
-            <li>Three Jetson Nano nodes integrated</li>
-            <li>Software stack deployed</li>
-            <li>Local data logging operational</li>
-        </ul>
-    </section>
-
-
-    <!-- ===== TEAM SECTION ===== -->
-    <section id="team">
-        <h2>Team</h2>
-        <p>Kenny Chiv
-            Mylo Dove
-            Davyd Prutskov
-            Jackson Grimsley</p>
-    </section>
-
-
-    <!-- ===== FOOTER ===== -->
-    <footer>
-        <p>NASA HUNCH Project | 2026</p>
-    </footer>
+<footer>
+    <p>NASA HUNCH Project | 2026</p>
+</footer>
 
 </body>
 </html>
