--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #0d1117; /* Dark background */
-    color: white; /* All text white */
-    line-height: 1.6;
+    background-color: lime;
 }
+
 
 /* Header */
 header {
