--- a/index.html
+++ b/index.html
@@ -1,141 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Nano4 Jetson Cluster</title>
-
+<title>Test</title>
 <style>
-/* ===== GENERAL PAGE STYLE ===== */
 body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #0d1117;
-    color: white;
-    line-height: 1.6;
-}
-
-/* ===== HEADER ===== */
-header {
-    background-color: #161b22;
-    padding: 40px 20px;
-    text-align: center;
-}
-
-header h1 {
-    margin: 0;
-    font-size: 2.5em;
-    color: white;
-}
-
-.subtitle {
-    color: #cccccc;
-}
-
-/* ===== NAVIGATION ===== */
-nav {
-    background-color: #21262d;
-    padding: 15px;
-    text-align: center;
-}
-
-nav a {
-    color: white;
-    margin: 0 20px;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-nav a:hover {
-    color: #58a6ff;
-}
-
-/* ===== SECTIONS ===== */
-section {
-    padding: 60px 20px;
-    max-width: 900px;
-    margin: auto;
-}
-
-h2 {
-    border-bottom: 2px solid #58a6ff;
-    padding-bottom: 10px;
-    color: white;
-}
-
-/* ===== IMAGE STYLE ===== */
-img {
-    width: 100%;
-    max-width: 600px;
-    display: block;
-    margin: 20px auto;
-    border-radius: 8px;
-}
-
-/* ===== FOOTER ===== */
-footer {
-    background-color: #161b22;
-    text-align: center;
-    padding: 20px;
-    margin-top: 40px;
-    font-size: 0.9em;
-    color: #cccccc;
+    background-color: lime;
 }
 </style>
-
 </head>
+
 <body>
-
-<header>
-    <h1>Nano4: AI Server Farm</h1>
-    <p class="subtitle">NASA HUNCH – Warren Tech Central</p>
-</header>
-
-<nav>
-    <a href="#overview">Project Overview</a>
-    <a href="#problem">Problem Statement</a>
-    <a href="#design">System Design</a>
-    <a href="#progress">Progress & Results</a>
-    <a href="#team">Team</a>
-</nav>
-
-<section id="overview">
-    <h2>Project Overview</h2>
-    <p>Put your project overview text here.</p>
-</section>
-
-<section id="problem">
-    <h2>Problem Statement</h2>
-    <p>Put your problem statement here.</p>
-</section>
-
-<section id="design">
-    <h2>System Design</h2>
-    <p>Explain how your Jetson Nano cluster works here.</p>
-    <img src="prototype.jpg" alt="Cluster Prototype">
-</section>
-
-<section id="progress">
-    <h2>Progress & Results</h2>
-    <ul>
-        <li>Three Jetson Nano nodes integrated</li>
-        <li>Software stack deployed</li>
-        <li>Local data logging operational</li>
-    </ul>
-</section>
-
-<section id="team">
-    <h2>Team</h2>
-    <p>
-        Kenny Chiv<br>
-        Mylo Dove<br>
-        Davyd Prutskov<br>
-        Jackson Grimsley
-    </p>
-</section>
-
-<footer>
-    NASA HUNCH Project | 2026
-</footer>
-
+<h1>If this background is green, it works.</h1>
 </body>
+
 </html>
