--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
 <head>
-<title>Test</title>
-<style>
-body {
-    background-color: lime;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nano4 Jetson Cluster</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
-<body>
-<h1>If this background is green, it works.</h1>
-</body>
-
-</html>
