--- a/index.html
+++ b/index.html
@@ -1,6 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nano4 Jetson Cluster</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
+
+<header>
+    <h1>Nano4: AI Server Farm</h1>
+    <p class="subtitle">NASA HUNCH – Warren Tech Central</p>
+</header>
+
+<nav>
+    <a href="#overview">Project Overview</a>
+    <a href="#problem">Problem Statement</a>
+    <a href="#design">System Design</a>
+    <a href="#progress">Progress & Results</a>
+    <a href="#team">Team</a>
+</nav>
+
+<section id="overview">
+    <h2>Project Overview</h2>
+    <p>Put your project overview text here.</p>
+</section>
+
+<section id="problem">
+    <h2>Problem Statement</h2>
+    <p>Put your problem statement here.</p>
+</section>
+
+<section id="design">
+    <h2>System Design</h2>
+    <p>Explain how your Jetson Nano cluster works here.</p>
+    <img src="prototype.jpg" alt="Cluster Prototype">
+</section>
+
+<section id="progress">
+    <h2>Progress & Results</h2>
+    <ul>
+        <li>Three Jetson Nano nodes integrated</li>
+        <li>Software stack deployed</li>
+        <li>Local data logging operational</li>
+    </ul>
+</section>
+
+<section id="team">
+    <h2>Team</h2>
+    <p>
+        Kenny Chiv<br>
+        Mylo Dove<br>
+        Davyd Prutskov<br>
+        Jackson Grimsley
+    </p>
+</section>
+
+<footer>
+    NASA HUNCH Project | 2026
+</footer>
+
+</body>
+</html>
