--- a/index.html
+++ b/index.html
@@ -33,32 +33,4 @@
 
 <section id="design">
     <h2>System Design</h2>
-    <p>Explain how your Jetson Nano cluster works here.</p>
-    <img src="prototype.jpg" alt="Cluster Prototype">
-</section>
-
-<section id="progress">
-    <h2>Progress & Results</h2>
-    <ul>
-        <li>Three Jetson Nano nodes integrated</li>
-        <li>Software stack deployed</li>
-        <li>Local data logging operational</li>
-    </ul>
-</section>
-
-<section id="team">
-    <h2>Team</h2>
-    <p>
-        Kenny Chiv<br>
-        Mylo Dove<br>
-        Davyd Prutskov<br>
-        Jackson Grimsley
-    </p>
-</section>
-
-<footer>
-    NASA HUNCH Project | 2026
-</footer>
-
-</body>
-</html>
+    <p>Explain how your Jetson
