--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
 <section id="overview">
     <h2>Project Overview</h2>
-    <p>Put your project overview text here.</p>
+    <p>project overview text here.</p>
 </section>
 
 <section id="problem">
     <h2>Problem Statement</h2>
-    <p>Put your problem statement here.</p>
+    <p>problem statement here.</p>
 </section>
 
 <section id="design">
     <h2>System Design</h2>
-    <p>Explain how your Jetson
+    <p>Image goes here<p>
