--- a/index.html
+++ b/index.html
@@ -34,3 +34,13 @@
 <section id="design">
     <h2>System Design</h2>
     <p>Image goes here<p>
+</section>
+
+<section id="progress">
+    <h2>Progress & Results</h2>
+    <p>Progress & Results go here</p>
+</section>
+
+<section id="team">
+    <h2>Team</h2>
+    <p>Team people here</p>
