--- a/index.html
+++ b/index.html
@@ -23,24 +23,19 @@
 
 <section id="overview">
     <h2>Project Overview</h2>
-    <p>project overview text here.</p>
+    <p>Project overview text here.</p>
 </section>
 
 <section id="problem">
     <h2>Problem Statement</h2>
-    <p>problem statement here.</p>
+    <p>Problem statement here.</p>
 </section>
 
 <section id="design">
     <h2>System Design</h2>
-    <p>Image goes here<p>
+    <p>Explain how your Jetson Nano cluster works here.</p>
+    <img src="prototype.jpg" alt="Cluster Prototype">
 </section>
 
 <section id="progress">
-    <h2>Progress & Results</h2>
-    <p>Progress & Results go here</p>
-</section>
-
-<section id="team">
-    <h2>Team</h2>
-    <p>Team people here</p>
+    <h2>Progress & Results
