--- a/index.html
+++ b/index.html
@@ -38,4 +38,11 @@
 </section>
 
 <section id="progress">
-    <h2>Progress & Results
+    <h2>Progress & Results<h2>
+    <p>Explain the progress & Results.</p>
+</section>
+
+</section> id="team">
+    <h2>team</h2>
+    <p>Kenny Chiv, Mylo Dove, Jackson Grimsley, Davyd Prutskov</p>
+</section>
