--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p>Explain the progress & Results.</p>
 </section>
 
-</section> id="team">
+</section> id="Team">
     <h2>team</h2>
     <p>Kenny Chiv, Mylo Dove, Jackson Grimsley, Davyd Prutskov</p>
 </section>
