--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="#problem">Problem Statement</a>
     <a href="#design">System Design</a>
     <a href="#progress">Progress & Results</a>
-    <a href="#team">Team</a>
+    <a href="#team">team</a>
 </nav>
 
 <section id="overview">
@@ -42,7 +42,9 @@
     <p>Explain the progress & Results.</p>
 </section>
 
-</section> id="Team">
+</section> id="team">
     <h2>team</h2>
     <p>Kenny Chiv, Mylo Dove, Jackson Grimsley, Davyd Prutskov</p>
 </section>
+
+
